{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 42,
  "lineage": "d6bd0d54-5acf-9b26-1bd0-4de357adf425",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spring_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:911291530745:instance/i-0c0405dd0f322ce82",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0405dd0f322ce82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ycr-aws5-keypair2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07cbcda485a426c86"
              }
            ],
            "primary_network_interface_id": "eni-07cbcda485a426c86",
            "private_dns": "ip-20-0-0-210.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.0.210",
            "public_dns": "ec2-13-201-63-24.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.63.24",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03b907eea3500c50c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029017b2e9415c751",
            "tags": {
              "Name": "springboot-server"
            },
            "tags_all": {
              "Name": "springboot-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbb60cbb0a2ab7bd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "i-0c0405dd0f322ce82",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.spring_sg",
            "aws_subnet.spring_subnet",
            "aws_vpc.spring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "spring_boot_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911291530745:internet-gateway/igw-055de8c9ac444fb07",
            "id": "igw-055de8c9ac444fb07",
            "owner_id": "911291530745",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "springboot-application-igw-dev",
              "Project": "springboot"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "springboot-application-igw-dev",
              "Project": "springboot"
            },
            "vpc_id": "vpc-086466778aed92604"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "igw-055de8c9ac444fb07",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spring_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911291530745:route-table/rtb-0e4c1f23d037b3fb6",
            "id": "rtb-0e4c1f23d037b3fb6",
            "owner_id": "911291530745",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055de8c9ac444fb07",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "springboot-application-route-table-dev",
              "Project": "springboot"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "springboot-application-route-table-dev",
              "Project": "springboot"
            },
            "timeouts": null,
            "vpc_id": "vpc-086466778aed92604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "rtb-0e4c1f23d037b3fb6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.spring_boot_igw",
            "aws_vpc.spring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spring_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f177eb4c3051765",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e4c1f23d037b3fb6",
            "subnet_id": "subnet-029017b2e9415c751"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "rtbassoc-03f177eb4c3051765",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.spring_boot_igw",
            "aws_route_table.spring_route_table",
            "aws_subnet.spring_subnet",
            "aws_vpc.spring_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5af07ba5b2bdd14",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e4c1f23d037b3fb6",
            "subnet_id": "subnet-08564e6a5a29c5e68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "rtbassoc-0c5af07ba5b2bdd14",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.spring_boot_igw",
            "aws_route_table.spring_route_table",
            "aws_subnet.spring_subnet",
            "aws_vpc.spring_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c690ab34aae25c38",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e4c1f23d037b3fb6",
            "subnet_id": "subnet-095faee8f6e6f1482"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "rtbassoc-0c690ab34aae25c38",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.spring_boot_igw",
            "aws_route_table.spring_route_table",
            "aws_subnet.spring_subnet",
            "aws_vpc.spring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911291530745:security-group/sg-0dbb60cbb0a2ab7bd",
            "description": "Security group for springboot-application in dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbb60cbb0a2ab7bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9191,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9191
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "springboot-application-sg-dev",
            "name_prefix": "",
            "owner_id": "911291530745",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "springboot-application-sg-dev"
            },
            "tags_all": {
              "Name": "springboot-application-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-086466778aed92604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "sg-0dbb60cbb0a2ab7bd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spring_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911291530745:subnet/subnet-029017b2e9415c751",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "20.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029017b2e9415c751",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911291530745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "springboot-application-subnet-1-dev"
            },
            "tags_all": {
              "Name": "springboot-application-subnet-1-dev"
            },
            "vpc_id": "vpc-086466778aed92604"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "subnet-029017b2e9415c751",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spring_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911291530745:subnet/subnet-08564e6a5a29c5e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08564e6a5a29c5e68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911291530745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "springboot-application-subnet-2-dev"
            },
            "tags_all": {
              "Name": "springboot-application-subnet-2-dev"
            },
            "vpc_id": "vpc-086466778aed92604"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "subnet-08564e6a5a29c5e68",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spring_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911291530745:subnet/subnet-095faee8f6e6f1482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095faee8f6e6f1482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911291530745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "springboot-application-subnet-3-dev"
            },
            "tags_all": {
              "Name": "springboot-application-subnet-3-dev"
            },
            "vpc_id": "vpc-086466778aed92604"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "subnet-095faee8f6e6f1482",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spring_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spring_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:911291530745:vpc/vpc-086466778aed92604",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0e9b6fabd8cc52722",
            "default_route_table_id": "rtb-0cf7d8e0f1be493b8",
            "default_security_group_id": "sg-04fa5a476a5f734fd",
            "dhcp_options_id": "dopt-0e0dbb0fffa68680e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086466778aed92604",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf7d8e0f1be493b8",
            "owner_id": "911291530745",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "springboot-application-vpc-dev",
              "Project": "springboot"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "springboot-application-vpc-dev",
              "Project": "springboot"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911291530745",
            "id": "vpc-086466778aed92604",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}